<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center_vertical|end"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/vacio"
            android:textColor="@color/white"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/limpiar"
            android:textColor="#4666FF"
            android:textSize="32sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/division"
            android:textColor="#4666FF"
            android:textSize="32sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/multiplicacion"
            android:textColor="#4666FF"
            android:textSize="32sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/borrar"
            android:textColor="#4666FF"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:backgroundTint="@color/black"
            android:text="@string/siete"
            android:textSize="48sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:backgroundTint="@color/black"
            android:text="@string/ocho"
            android:textSize="48sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:backgroundTint="@color/black"
            android:text="@string/nueve"
            android:textSize="48sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/menos"
            android:textColor="#4666FF"
            android:textSize="52sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:backgroundTint="@color/black"
            android:text="@string/cuatro"
            android:textSize="48sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:backgroundTint="@color/black"
            android:text="@string/cinco"
            android:textSize="48sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:backgroundTint="@color/black"
            android:text="@string/seis"
            android:textSize="48sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/mas"
            android:textColor="#4666FF"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="75"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="33"
                    android:backgroundTint="@color/black"
                    android:text="@string/uno"
                    android:textSize="48sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="33"
                    android:backgroundTint="@color/black"
                    android:text="@string/dos"
                    android:textSize="48sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="33"
                    android:backgroundTint="@color/black"
                    android:text="@string/tres"
                    android:textSize="48sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="33"
                    android:backgroundTint="@color/black"
                    android:text="@string/porcentaje"
                    android:textSize="32sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="33"
                    android:backgroundTint="@color/black"
                    android:text="@string/cero"
                    android:textSize="48sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="33"
                    android:backgroundTint="@color/black"
                    android:text="@string/punto"
                    android:textSize="32sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:backgroundTint="#4666FF"
            android:text="@string/igual"
            android:textSize="48sp" />
    </LinearLayout>

</LinearLayout>
    
    